--- a/app/index.html
+++ b/app/index.html
@@ -161,7 +161,7 @@
                 <span>Radiustheme</span>
               </a>
               <div class="product__item-star">
-                (05)
+                <div class="rate-star"></div>(<span>05</span>)
               </div>
             </div>
           </div>
@@ -187,7 +187,7 @@
                 <span>Radiustheme</span>
               </a>
               <div class="product__item-star">
-                (05)
+                <div class="rate-star"></div>(<span>05</span>)
               </div>
             </div>
           </div>
@@ -213,7 +213,7 @@
                 <span>Radiustheme</span>
               </a>
               <div class="product__item-star">
-                (05)
+                <div class="rate-star"></div><span>05</span>
               </div>
             </div>
           </div>
@@ -239,7 +239,7 @@
                 <span>Radiustheme</span>
               </a>
               <div class="product__item-star">
-                (05)
+                <div class="rate-star"></div><span>05</span>
               </div>
             </div>
           </div>
@@ -265,7 +265,7 @@
                 <span>Radiustheme</span>
               </a>
               <div class="product__item-star">
-                (05)
+                <div class="rate-star"></div><span>05</span>
               </div>
             </div>
           </div>
@@ -291,7 +291,7 @@
                 <span>Radiustheme</span>
               </a>
               <div class="product__item-star">
-                (05)
+                <div class="rate-star"></div><span>05</span>
               </div>
             </div>
           </div>
@@ -317,7 +317,7 @@
                 <span>Radiustheme</span>
               </a>
               <div class="product__item-star">
-                (05)
+                <div class="rate-star"></div><span>05</span>
               </div>
             </div>
           </div>
@@ -343,7 +343,7 @@
                 <span>Radiustheme</span>
               </a>
               <div class="product__item-star">
-                (05)
+                <div class="rate-star"></div><span>05</span>
               </div>
             </div>
           </div>
@@ -356,6 +356,443 @@
       </div>
     </div>
   </section>
+
+  <!-- ----------------------------PRODUCT-SLIDER---------------------------- -->
+
+  <section class="product-slider">
+    <div class="container-fluid">
+      <div class="product-slider__title title">
+        This Week Trending Products
+      </div>
+      <div class="product-slider__inner">
+
+        <div class="product__item">
+          <a class="product__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+          <div class="product__item-content">
+            <div class="product__item-name">
+              <a class="product__item-title" href="#">
+                Responsive Mobile APP
+              </a>
+              <a class="product__item-category" href="#">
+                Site Template
+              </a>
+            </div>
+            <div class="product__item-price">
+              $19
+            </div>
+          </div>
+          <div class="product__item-info">
+            <a class="product__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+              <span>Radiustheme</span>
+            </a>
+            <div class="product__item-star">
+              <div class="rate-star"></div><span>05</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="product__item">
+          <a class="product__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+          <div class="product__item-content">
+            <div class="product__item-name">
+              <a class="product__item-title" href="#">
+                Responsive Mobile APP
+              </a>
+              <a class="product__item-category" href="#">
+                Site Template
+              </a>
+            </div>
+            <div class="product__item-price">
+              $19
+            </div>
+          </div>
+          <div class="product__item-info">
+            <a class="product__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+              <span>Radiustheme</span>
+            </a>
+            <div class="product__item-star">
+              <div class="rate-star"></div><span>05</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="product__item">
+          <a class="product__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+          <div class="product__item-content">
+            <div class="product__item-name">
+              <a class="product__item-title" href="#">
+                Responsive Mobile APP
+              </a>
+              <a class="product__item-category" href="#">
+                Site Template
+              </a>
+            </div>
+            <div class="product__item-price">
+              $19
+            </div>
+          </div>
+          <div class="product__item-info">
+            <a class="product__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+              <span>Radiustheme</span>
+            </a>
+            <div class="product__item-star">
+              <div class="rate-star"></div><span>05</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="product__item">
+          <a class="product__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+          <div class="product__item-content">
+            <div class="product__item-name">
+              <a class="product__item-title" href="#">
+                Responsive Mobile APP
+              </a>
+              <a class="product__item-category" href="#">
+                Site Template
+              </a>
+            </div>
+            <div class="product__item-price">
+              $19
+            </div>
+          </div>
+          <div class="product__item-info">
+            <a class="product__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+              <span>Radiustheme</span>
+            </a>
+            <div class="product__item-star">
+              <div class="rate-star"></div><span>05</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="product__item">
+          <a class="product__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+          <div class="product__item-content">
+            <div class="product__item-name">
+              <a class="product__item-title" href="#">
+                Responsive Mobile APP
+              </a>
+              <a class="product__item-category" href="#">
+                Site Template
+              </a>
+            </div>
+            <div class="product__item-price">
+              $19
+            </div>
+          </div>
+          <div class="product__item-info">
+            <a class="product__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+              <span>Radiustheme</span>
+            </a>
+            <div class="product__item-star">
+              <div class="rate-star"></div><span>05</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="product__item">
+          <a class="product__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+          <div class="product__item-content">
+            <div class="product__item-name">
+              <a class="product__item-title" href="#">
+                Responsive Mobile APP
+              </a>
+              <a class="product__item-category" href="#">
+                Site Template
+              </a>
+            </div>
+            <div class="product__item-price">
+              $19
+            </div>
+          </div>
+          <div class="product__item-info">
+            <a class="product__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+              <span>Radiustheme</span>
+            </a>
+            <div class="product__item-star">
+              <div class="rate-star"></div><span>05</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="product__item">
+          <a class="product__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+          <div class="product__item-content">
+            <div class="product__item-name">
+              <a class="product__item-title" href="#">
+                Responsive Mobile APP
+              </a>
+              <a class="product__item-category" href="#">
+                Site Template
+              </a>
+            </div>
+            <div class="product__item-price">
+              $19
+            </div>
+          </div>
+          <div class="product__item-info">
+            <a class="product__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+              <span>Radiustheme</span>
+            </a>
+            <div class="product__item-star">
+              <div class="rate-star"></div><span>05</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="product__item">
+          <a class="product__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+          <div class="product__item-content">
+            <div class="product__item-name">
+              <a class="product__item-title" href="#">
+                Responsive Mobile APP
+              </a>
+              <a class="product__item-category" href="#">
+                Site Template
+              </a>
+            </div>
+            <div class="product__item-price">
+              $19
+            </div>
+          </div>
+          <div class="product__item-info">
+            <a class="product__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+              <span>Radiustheme</span>
+            </a>
+            <div class="product__item-star">
+              <div class="rate-star"></div><span>05</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="product__item">
+          <a class="product__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+          <div class="product__item-content">
+            <div class="product__item-name">
+              <a class="product__item-title" href="#">
+                Responsive Mobile APP
+              </a>
+              <a class="product__item-category" href="#">
+                Site Template
+              </a>
+            </div>
+            <div class="product__item-price">
+              $19
+            </div>
+          </div>
+          <div class="product__item-info">
+            <a class="product__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+              <span>Radiustheme</span>
+            </a>
+            <div class="product__item-star">
+              <div class="rate-star"></div><span>05</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="product__item">
+          <a class="product__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+          <div class="product__item-content">
+            <div class="product__item-name">
+              <a class="product__item-title" href="#">
+                Responsive Mobile APP
+              </a>
+              <a class="product__item-category" href="#">
+                Site Template
+              </a>
+            </div>
+            <div class="product__item-price">
+              $19
+            </div>
+          </div>
+          <div class="product__item-info">
+            <a class="product__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+              <span>Radiustheme</span>
+            </a>
+            <div class="product__item-star">
+              <div class="rate-star"></div><span>05</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="product__item">
+          <a class="product__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+          <div class="product__item-content">
+            <div class="product__item-name">
+              <a class="product__item-title" href="#">
+                Responsive Mobile APP
+              </a>
+              <a class="product__item-category" href="#">
+                Site Template
+              </a>
+            </div>
+            <div class="product__item-price">
+              $19
+            </div>
+          </div>
+          <div class="product__item-info">
+            <a class="product__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+              <span>Radiustheme</span>
+            </a>
+            <div class="product__item-star">
+              <div class="rate-star"></div><span>05</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="product__item">
+          <a class="product__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+          <div class="product__item-content">
+            <div class="product__item-name">
+              <a class="product__item-title" href="#">
+                Responsive Mobile APP
+              </a>
+              <a class="product__item-category" href="#">
+                Site Template
+              </a>
+            </div>
+            <div class="product__item-price">
+              $19
+            </div>
+          </div>
+          <div class="product__item-info">
+            <a class="product__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+              <span>Radiustheme</span>
+            </a>
+            <div class="product__item-star">
+              <div class="rate-star"></div><span>05</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="product__item">
+          <a class="product__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+          <div class="product__item-content">
+            <div class="product__item-name">
+              <a class="product__item-title" href="#">
+                Responsive Mobile APP
+              </a>
+              <a class="product__item-category" href="#">
+                Site Template
+              </a>
+            </div>
+            <div class="product__item-price">
+              $19
+            </div>
+          </div>
+          <div class="product__item-info">
+            <a class="product__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+              <span>Radiustheme</span>
+            </a>
+            <div class="product__item-star">
+              <div class="rate-star"></div><span>05</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="product__item">
+          <a class="product__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+          <div class="product__item-content">
+            <div class="product__item-name">
+              <a class="product__item-title" href="#">
+                Responsive Mobile APP
+              </a>
+              <a class="product__item-category" href="#">
+                Site Template
+              </a>
+            </div>
+            <div class="product__item-price">
+              $19
+            </div>
+          </div>
+          <div class="product__item-info">
+            <a class="product__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+              <span>Radiustheme</span>
+            </a>
+            <div class="product__item-star">
+              <div class="rate-star"></div><span>05</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="product__item">
+          <a class="product__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+          <div class="product__item-content">
+            <div class="product__item-name">
+              <a class="product__item-title" href="#">
+                Responsive Mobile APP
+              </a>
+              <a class="product__item-category" href="#">
+                Site Template
+              </a>
+            </div>
+            <div class="product__item-price">
+              $19
+            </div>
+          </div>
+          <div class="product__item-info">
+            <a class="product__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+              <span>Radiustheme</span>
+            </a>
+            <div class="product__item-star">
+              <div class="rate-star"></div><span>05</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="product__item">
+          <a class="product__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+          <div class="product__item-content">
+            <div class="product__item-name">
+              <a class="product__item-title" href="#">
+                Responsive Mobile APP
+              </a>
+              <a class="product__item-category" href="#">
+                Site Template
+              </a>
+            </div>
+            <div class="product__item-price">
+              $19
+            </div>
+          </div>
+          <div class="product__item-info">
+            <a class="product__item-author" href="#">
+              <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+              <span>Radiustheme</span>
+            </a>
+            <div class="product__item-star">
+              <div class="rate-star"></div><span>05</span>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+
+
+
+
+
+
+
 
 
   <!-- ----------------------------JAVASCRIPT & JQUERY---------------------------- -->
